# ecole42-python-for-data-science

python-0-starting/ex00/: Hello.py
python-0-starting/ex01/: format_ft_time.py
python-0-starting/ex02/: find_ft_type.py
python-0-starting/ex03/: NULL_not_found.py
python-0-starting/ex04/: whatis.py
python-0-starting/ex05/: building.py
python-0-starting/ex06/: filterstring.py  ft_filter.py
python-0-starting/ex07/: sos.py
python-0-starting/ex08/: Loading.py
python-0-starting/ex09/: README.md  pyproject.toml
python-0-starting/ex09/src/ft_package/: __init__.py  count_in_list.py
python-1-array/ex00/: give_bmi.py
python-1-array/ex01/: array2D.py
python-1-array/ex02/: load_image.py
python-1-array/ex03/: load_image.py  zoom.py
python-1-array/ex04/: rotate.py
python-1-array/ex05/: pimp_image.py
python-2-datatable/ex00/: load_csv.py
python-2-datatable/ex01/: aff_life.py
python-2-datatable/ex02/: aff_pop.py
python-2-datatable/ex03/: projection_life.py
python-3-oop/ex01/: S1E9.py
python-3-oop/ex02/: DiamondTrap.py  S1E7.py
python-3-oop/ex03/: ft_calculator.py
python-3-oop/ex04/: ft_calculator.py
python-4-dod/ex00/: statistics.py
python-4-dod/ex01/: in_out.py
python-4-dod/ex02/: callLimit.py
python-4-dod/ex03/: new_student.py
